Add surface output generation

--- a/Test/run_pyReef.ipynb
+++ b/Test/run_pyReef.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -14,24 +14,24 @@
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from pyReef.model import Model as pyReefModel"
+    "from pyReef.model import Model "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# initialise model\n",
-    "reef = pyReefModel()"
+    "reef = Model()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -43,23 +43,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(252, 251)\n",
-      "[  -1.  140.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print reef.demGrid.regZ.shape\n",
-    "print reef.input.waveDir"
+    "print reef.pyGrid.partIDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print reef.pyGrid.regZ.shape,reef.pyGrid.partIDs\n",
+    "print reef.force.waveNb,reef.force.waveWu"
    ]
   },
   {
@@ -77,7 +79,7 @@
     "ax = plt.gca()\n",
     "\n",
     "# Map\n",
-    "im = ax.imshow(reef.demGrid.regZ.T, extent=(0,1,0,1), origin='lower', aspect=1)\n",
+    "im = ax.imshow(reef.pyGrid.regZ.T, extent=(0,1,0,1), origin='lower', aspect=1)\n",
     "im.set_cmap('terrain')\n",
     "\n",
     "# Colorbar\n",
@@ -87,6 +89,72 @@
     "cb.set_label('topography',size=12)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "reef.pyGrid.regZ.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "reef.pyGrid.regX.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "reef.pyGrid.regY.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x,y = np.meshgrid(reef.pyGrid.regX, reef.pyGrid.regY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!mpiexec -n 7 python mpi_example.py 10000"
    ]
   },
   {
