add stratigraphic mesh

--- a/Test/run_pyReef.ipynb
+++ b/Test/run_pyReef.ipynb
@@ -2,24 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import numpy as np\n",
-    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "from pyReef.model import Model "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -31,11 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Swan model initialisation took 0.09 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the XmL input file\n",
     "reef.load_xml('input.xml')"
@@ -49,7 +51,7 @@
    },
    "outputs": [],
    "source": [
-    "print reef.pyGrid.partIDs"
+    "print reef.pyStrat.stratPerc[10,10,0,:]"
    ]
   },
   {
@@ -72,6 +74,12 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import numpy as np\n",
+    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "# display plots in SVG format\n",
     "%config InlineBackend.figure_format = 'svg' \n",
     "\n",
@@ -89,6 +97,17 @@
     "cb.set_label('topography',size=12)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!mpiexec -n 1 python mpi_example.py 10000"
    ]
   },
   {
@@ -148,13 +167,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "!mpiexec -n 7 python mpi_example.py 10000"
+    "!mpiexec -n 2 python mpi_example.py 10000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!mpiexec -n 1 python mpi_example.py 10000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!mpiexec -n 2 python mpi_example.py 10000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!mpiexec -n 3 python mpi_example.py 10000"
    ]
   },
   {
