force swan with wave conditions

--- a/Test/localDev/localupdate.ipynb
+++ b/Test/localDev/localupdate.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -297,8 +297,8 @@
       "\u001b[39mbuild_src\u001b[0m\n",
       "\u001b[39mbuilding extension \"simswan\" sources\u001b[0m\n",
       "\u001b[39mf2py options: []\u001b[0m\n",
-      "\u001b[39mf2py:> /tmp/tmp5pjpeB/src.linux-x86_64-2.7/simswanmodule.c\u001b[0m\n",
-      "\u001b[39mcreating /tmp/tmp5pjpeB/src.linux-x86_64-2.7\u001b[0m\n",
+      "\u001b[39mf2py:> /tmp/tmpocLGBb/src.linux-x86_64-2.7/simswanmodule.c\u001b[0m\n",
+      "\u001b[39mcreating /tmp/tmpocLGBb/src.linux-x86_64-2.7\u001b[0m\n",
       "Reading fortran codes...\n",
       "\tReading file 'simswan.f90' (format:free)\n",
       "Post-processing...\n",
@@ -350,18 +350,18 @@
       "\tBuilding module \"simswan\"...\n",
       "\t\tConstructing F90 module support for \"model\"...\n",
       "\t\t\tConstructing wrapper function \"model.init\"...\n",
-      "\t\t\t  init(pycomm,pysfile,pysinfo,pysbot,pysout,pyz,pywu,pywd,pydx,pywbase,pysl,[pynx,pyny])\n",
+      "\t\t\t  init(pycomm,pysfile,pysinfo,pysbot,pysout,pyz,pywh,pywp,pywd,pydx,pywbase,pysl,[pynx,pyny])\n",
       "\t\t\tConstructing wrapper function \"model.run\"...\n",
-      "\t\t\t  pywavu,pydir,pywavh = run(pycomm,pyz,pywu,pywd,pysl,[pynx,pyny])\n",
+      "\t\t\t  pywavu,pydir,pywavh = run(pycomm,pyz,pywh,pywp,pywd,pysl,[pynx,pyny])\n",
       "\t\t\tConstructing wrapper function \"model.final\"...\n",
       "\t\t\t  final(pycomm)\n",
-      "\tWrote C/API module \"simswan\" to file \"/tmp/tmp5pjpeB/src.linux-x86_64-2.7/simswanmodule.c\"\n",
-      "\tFortran 90 wrappers are saved to \"/tmp/tmp5pjpeB/src.linux-x86_64-2.7/simswan-f2pywrappers2.f90\"\n",
-      "\u001b[39m  adding '/tmp/tmp5pjpeB/src.linux-x86_64-2.7/fortranobject.c' to sources.\u001b[0m\n",
-      "\u001b[39m  adding '/tmp/tmp5pjpeB/src.linux-x86_64-2.7' to include_dirs.\u001b[0m\n",
-      "\u001b[39mcopying /usr/local/lib/python2.7/dist-packages/numpy/f2py/src/fortranobject.c -> /tmp/tmp5pjpeB/src.linux-x86_64-2.7\u001b[0m\n",
-      "\u001b[39mcopying /usr/local/lib/python2.7/dist-packages/numpy/f2py/src/fortranobject.h -> /tmp/tmp5pjpeB/src.linux-x86_64-2.7\u001b[0m\n",
-      "\u001b[39m  adding '/tmp/tmp5pjpeB/src.linux-x86_64-2.7/simswan-f2pywrappers2.f90' to sources.\u001b[0m\n",
+      "\tWrote C/API module \"simswan\" to file \"/tmp/tmpocLGBb/src.linux-x86_64-2.7/simswanmodule.c\"\n",
+      "\tFortran 90 wrappers are saved to \"/tmp/tmpocLGBb/src.linux-x86_64-2.7/simswan-f2pywrappers2.f90\"\n",
+      "\u001b[39m  adding '/tmp/tmpocLGBb/src.linux-x86_64-2.7/fortranobject.c' to sources.\u001b[0m\n",
+      "\u001b[39m  adding '/tmp/tmpocLGBb/src.linux-x86_64-2.7' to include_dirs.\u001b[0m\n",
+      "\u001b[39mcopying /usr/local/lib/python2.7/dist-packages/numpy/f2py/src/fortranobject.c -> /tmp/tmpocLGBb/src.linux-x86_64-2.7\u001b[0m\n",
+      "\u001b[39mcopying /usr/local/lib/python2.7/dist-packages/numpy/f2py/src/fortranobject.h -> /tmp/tmpocLGBb/src.linux-x86_64-2.7\u001b[0m\n",
+      "\u001b[39m  adding '/tmp/tmpocLGBb/src.linux-x86_64-2.7/simswan-f2pywrappers2.f90' to sources.\u001b[0m\n",
       "\u001b[39mbuild_src: building npy-pkg config files\u001b[0m\n",
       "\u001b[39mrunning build_ext\u001b[0m\n",
       "\u001b[39mcustomize UnixCCompiler\u001b[0m\n",
@@ -374,47 +374,47 @@
       "\u001b[39mcompiling C sources\u001b[0m\n",
       "\u001b[39mC compiler: x86_64-linux-gnu-gcc -pthread -fno-strict-aliasing -DNDEBUG -g -fwrapv -O2 -Wall -Wstrict-prototypes -fPIC\n",
       "\u001b[0m\n",
-      "\u001b[39mcreating /tmp/tmp5pjpeB/tmp\u001b[0m\n",
-      "\u001b[39mcreating /tmp/tmp5pjpeB/tmp/tmp5pjpeB\u001b[0m\n",
-      "\u001b[39mcreating /tmp/tmp5pjpeB/tmp/tmp5pjpeB/src.linux-x86_64-2.7\u001b[0m\n",
-      "\u001b[39mcompile options: '-I/workspace/volume/pyReef/pyReef/libUtils/WaveComp/build/modules -I/tmp/tmp5pjpeB/src.linux-x86_64-2.7 -I/usr/local/lib/python2.7/dist-packages/numpy/core/include -I/usr/include/python2.7 -c'\u001b[0m\n",
-      "\u001b[39mx86_64-linux-gnu-gcc: /tmp/tmp5pjpeB/src.linux-x86_64-2.7/simswanmodule.c\u001b[0m\n",
+      "\u001b[39mcreating /tmp/tmpocLGBb/tmp\u001b[0m\n",
+      "\u001b[39mcreating /tmp/tmpocLGBb/tmp/tmpocLGBb\u001b[0m\n",
+      "\u001b[39mcreating /tmp/tmpocLGBb/tmp/tmpocLGBb/src.linux-x86_64-2.7\u001b[0m\n",
+      "\u001b[39mcompile options: '-I/workspace/volume/pyReef/pyReef/libUtils/WaveComp/build/modules -I/tmp/tmpocLGBb/src.linux-x86_64-2.7 -I/usr/local/lib/python2.7/dist-packages/numpy/core/include -I/usr/include/python2.7 -c'\u001b[0m\n",
+      "\u001b[39mx86_64-linux-gnu-gcc: /tmp/tmpocLGBb/src.linux-x86_64-2.7/fortranobject.c\u001b[0m\n",
       "In file included from /usr/local/lib/python2.7/dist-packages/numpy/core/include/numpy/ndarraytypes.h:1777:0,\n",
       "                 from /usr/local/lib/python2.7/dist-packages/numpy/core/include/numpy/ndarrayobject.h:18,\n",
       "                 from /usr/local/lib/python2.7/dist-packages/numpy/core/include/numpy/arrayobject.h:4,\n",
-      "                 from /tmp/tmp5pjpeB/src.linux-x86_64-2.7/fortranobject.h:13,\n",
-      "                 from /tmp/tmp5pjpeB/src.linux-x86_64-2.7/simswanmodule.c:19:\n",
+      "                 from /tmp/tmpocLGBb/src.linux-x86_64-2.7/fortranobject.h:13,\n",
+      "                 from /tmp/tmpocLGBb/src.linux-x86_64-2.7/fortranobject.c:2:\n",
       "/usr/local/lib/python2.7/dist-packages/numpy/core/include/numpy/npy_1_7_deprecated_api.h:15:2: warning: #warning \"Using deprecated NumPy API, disable it by \" \"#defining NPY_NO_DEPRECATED_API NPY_1_7_API_VERSION\" [-Wcpp]\n",
       " #warning \"Using deprecated NumPy API, disable it by \" \\\n",
       "  ^\n",
-      "/tmp/tmp5pjpeB/src.linux-x86_64-2.7/simswanmodule.c:184:12: warning: 'f2py_size' defined but not used [-Wunused-function]\n",
+      "\u001b[39mx86_64-linux-gnu-gcc: /tmp/tmpocLGBb/src.linux-x86_64-2.7/simswanmodule.c\u001b[0m\n",
+      "In file included from /usr/local/lib/python2.7/dist-packages/numpy/core/include/numpy/ndarraytypes.h:1777:0,\n",
+      "                 from /usr/local/lib/python2.7/dist-packages/numpy/core/include/numpy/ndarrayobject.h:18,\n",
+      "                 from /usr/local/lib/python2.7/dist-packages/numpy/core/include/numpy/arrayobject.h:4,\n",
+      "                 from /tmp/tmpocLGBb/src.linux-x86_64-2.7/fortranobject.h:13,\n",
+      "                 from /tmp/tmpocLGBb/src.linux-x86_64-2.7/simswanmodule.c:19:\n",
+      "/usr/local/lib/python2.7/dist-packages/numpy/core/include/numpy/npy_1_7_deprecated_api.h:15:2: warning: #warning \"Using deprecated NumPy API, disable it by \" \"#defining NPY_NO_DEPRECATED_API NPY_1_7_API_VERSION\" [-Wcpp]\n",
+      " #warning \"Using deprecated NumPy API, disable it by \" \\\n",
+      "  ^\n",
+      "/tmp/tmpocLGBb/src.linux-x86_64-2.7/simswanmodule.c:184:12: warning: 'f2py_size' defined but not used [-Wunused-function]\n",
       " static int f2py_size(PyArrayObject* var, ...)\n",
       "            ^\n",
-      "\u001b[39mx86_64-linux-gnu-gcc: /tmp/tmp5pjpeB/src.linux-x86_64-2.7/fortranobject.c\u001b[0m\n",
-      "In file included from /usr/local/lib/python2.7/dist-packages/numpy/core/include/numpy/ndarraytypes.h:1777:0,\n",
-      "                 from /usr/local/lib/python2.7/dist-packages/numpy/core/include/numpy/ndarrayobject.h:18,\n",
-      "                 from /usr/local/lib/python2.7/dist-packages/numpy/core/include/numpy/arrayobject.h:4,\n",
-      "                 from /tmp/tmp5pjpeB/src.linux-x86_64-2.7/fortranobject.h:13,\n",
-      "                 from /tmp/tmp5pjpeB/src.linux-x86_64-2.7/fortranobject.c:2:\n",
-      "/usr/local/lib/python2.7/dist-packages/numpy/core/include/numpy/npy_1_7_deprecated_api.h:15:2: warning: #warning \"Using deprecated NumPy API, disable it by \" \"#defining NPY_NO_DEPRECATED_API NPY_1_7_API_VERSION\" [-Wcpp]\n",
-      " #warning \"Using deprecated NumPy API, disable it by \" \\\n",
-      "  ^\n",
       "\u001b[39mcompiling Fortran 90 module sources\u001b[0m\n",
       "\u001b[39mFortran f77 compiler: /usr/bin/mpif90 -Wall -g -ffixed-form -fno-second-underscore -fPIC -O3 -funroll-loops\n",
       "Fortran f90 compiler: mpif90 -Wall -g -fno-second-underscore -fPIC -O3 -funroll-loops\n",
       "Fortran fix compiler: mpif90 -Wall -g -ffixed-form -fno-second-underscore -Wall -g -fno-second-underscore -fPIC -O3 -funroll-loops\u001b[0m\n",
-      "\u001b[39mcompile options: '-I/workspace/volume/pyReef/pyReef/libUtils/WaveComp/build/modules -I/tmp/tmp5pjpeB/src.linux-x86_64-2.7 -I/usr/local/lib/python2.7/dist-packages/numpy/core/include -I/usr/include/python2.7 -c'\n",
-      "extra options: '-J/tmp/tmp5pjpeB/ -I/tmp/tmp5pjpeB/'\u001b[0m\n",
+      "\u001b[39mcompile options: '-I/workspace/volume/pyReef/pyReef/libUtils/WaveComp/build/modules -I/tmp/tmpocLGBb/src.linux-x86_64-2.7 -I/usr/local/lib/python2.7/dist-packages/numpy/core/include -I/usr/include/python2.7 -c'\n",
+      "extra options: '-J/tmp/tmpocLGBb/ -I/tmp/tmpocLGBb/'\u001b[0m\n",
       "\u001b[39mmpif90:f90: simswan.f90\u001b[0m\n",
       "\u001b[39mcompiling Fortran sources\u001b[0m\n",
       "\u001b[39mFortran f77 compiler: /usr/bin/mpif90 -Wall -g -ffixed-form -fno-second-underscore -fPIC -O3 -funroll-loops\n",
       "Fortran f90 compiler: mpif90 -Wall -g -fno-second-underscore -fPIC -O3 -funroll-loops\n",
       "Fortran fix compiler: mpif90 -Wall -g -ffixed-form -fno-second-underscore -Wall -g -fno-second-underscore -fPIC -O3 -funroll-loops\u001b[0m\n",
-      "\u001b[39mcompile options: '-I/workspace/volume/pyReef/pyReef/libUtils/WaveComp/build/modules -I/tmp/tmp5pjpeB/src.linux-x86_64-2.7 -I/usr/local/lib/python2.7/dist-packages/numpy/core/include -I/usr/include/python2.7 -c'\n",
-      "extra options: '-J/tmp/tmp5pjpeB/ -I/tmp/tmp5pjpeB/'\u001b[0m\n",
-      "\u001b[39mmpif90:f90: /tmp/tmp5pjpeB/src.linux-x86_64-2.7/simswan-f2pywrappers2.f90\u001b[0m\n",
-      "\u001b[39m/usr/bin/mpif90 -Wall -g -Wall -g -shared /tmp/tmp5pjpeB/tmp/tmp5pjpeB/src.linux-x86_64-2.7/simswanmodule.o /tmp/tmp5pjpeB/tmp/tmp5pjpeB/src.linux-x86_64-2.7/fortranobject.o /tmp/tmp5pjpeB/simswan.o /tmp/tmp5pjpeB/tmp/tmp5pjpeB/src.linux-x86_64-2.7/simswan-f2pywrappers2.o -L/workspace/volume/pyReef/pyReef/libUtils/WaveComp/build/lib/ -lWaveParam -lgfortran -o ./simswan.so\u001b[0m\n",
-      "Removing build directory /tmp/tmp5pjpeB\n",
+      "\u001b[39mcompile options: '-I/workspace/volume/pyReef/pyReef/libUtils/WaveComp/build/modules -I/tmp/tmpocLGBb/src.linux-x86_64-2.7 -I/usr/local/lib/python2.7/dist-packages/numpy/core/include -I/usr/include/python2.7 -c'\n",
+      "extra options: '-J/tmp/tmpocLGBb/ -I/tmp/tmpocLGBb/'\u001b[0m\n",
+      "\u001b[39mmpif90:f90: /tmp/tmpocLGBb/src.linux-x86_64-2.7/simswan-f2pywrappers2.f90\u001b[0m\n",
+      "\u001b[39m/usr/bin/mpif90 -Wall -g -Wall -g -shared /tmp/tmpocLGBb/tmp/tmpocLGBb/src.linux-x86_64-2.7/simswanmodule.o /tmp/tmpocLGBb/tmp/tmpocLGBb/src.linux-x86_64-2.7/fortranobject.o /tmp/tmpocLGBb/simswan.o /tmp/tmpocLGBb/tmp/tmpocLGBb/src.linux-x86_64-2.7/simswan-f2pywrappers2.o -L/workspace/volume/pyReef/pyReef/libUtils/WaveComp/build/lib/ -lWaveParam -lgfortran -o ./simswan.so\u001b[0m\n",
+      "Removing build directory /tmp/tmpocLGBb\n",
       "make[1]: Leaving directory `/workspace/volume/pyReef/pyReef/libUtils'\n"
      ]
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -473,14 +473,40 @@
       "Listing ./libUtils/WaveComp/build/modules ...\n",
       "Listing ./libUtils/WaveComp/build/objects ...\n",
       "Listing ./libUtils/__pycache__ ...\n",
-      "Listing ./simulation ...\n",
-      "Compiling ./simulation/raster2surf.py ...\n"
+      "Listing ./simulation ...\n"
      ]
     }
    ],
    "source": [
     "!cd /workspace/volume/pyReef/pyReef/; python -m compileall ."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
