add plotting functions

--- a/Test/visModel.ipynb
+++ b/Test/visModel.ipynb
@@ -1,41 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Build local directory libraries"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "!cd /workspace/volume/pyReef/pyReef/libUtils/; make clobber"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "!cd /workspace/volume/pyReef/pyReef/libUtils/; make dist"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Install local badlands model on the container"
+    "%matplotlib inline\n",
+    "\n",
+    "import cmocean\n",
+    "from postProcessing.pyReefPlot import pyReefPlot\n",
+    "\n",
+    "%config InlineBackend.figure_format = 'svg'"
    ]
   },
   {
@@ -46,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "!cd /workspace/volume/pyReef/pyReef/libUtils/; pip install -e /workspace/volume/pyReef/"
+    "rplot = pyReefPlot(folder='outReef', ncpus=2, bbox=None, dx=None, az=315, alt=45)"
    ]
   },
   {
@@ -57,62 +35,53 @@
    },
    "outputs": [],
    "source": [
-    "!cd /workspace/volume/pyReef/pyReef/; python -m compileall ."
+    "rplot.loadHDF5(timestep=0, sl=1.5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "rplot.bathymetry(color=cmocean.cm.delta, fsize=(7.5,5), fname='bathy.png', dpi=300)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "rplot.slope(color=cmocean.cm.matter, fsize=(7.5,5), fname='slope.png', dpi=300)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "levels = [0.5,1,1.5,2,2.5,3,3.5,4]\n",
+    "rplot.waveHeight(climate=0, lvls=levels, color=cmocean.cm.thermal, fsize=(7.5,5), fname='height.png', dpi=300)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "rplot.bottomCurrents(climate=0, gauss=3., dens=5, color=cmocean.cm.deep, fsize=(7.5,5), fname='currents.png', dpi=300)"
+   ]
   },
   {
    "cell_type": "code",
@@ -144,5 +113,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
