--- a/Test/run_pyReef.ipynb
+++ b/Test/run_pyReef.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -67,15 +67,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "reef.mPlot.paramInit(z=reef.pyGrid.regZ, sl=reef.force.sealevel)\n",
-    "reef.mPlot.bathymetry(color=cmocean.cm.delta, fsize=(7.5,5), fname='bathy.png', dpi=300)\n",
-    "reef.mPlot.slope(color=cmocean.cm.matter, fsize=(7.5,5), fname='slope.png', dpi=300)"
+    "#reef.mPlot.bathymetry(color=cmocean.cm.delta, fsize=(7.5,5), fname='bathy.png', dpi=300)\n",
+    "#reef.mPlot.slope(color=cmocean.cm.matter, fsize=(7.5,5), fname='slope.png', dpi=300)"
    ]
   },
   {
@@ -91,12 +91,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------\n",
+      "Hydrodynamics: waves field 0 and climatic conditions 0:\n",
+      "   -   Wave propagation took 4.66 seconds to run.\n",
+      "   -   Currents model took 1.09 seconds to run.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run model\n",
+    "reef.run_to_time(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Run model\n",
-    "reef.run_to_time(0.5)"
+    "reef.mPlot.bathymetry(color=cmocean.cm.delta, fsize=(7.5,5), fname='bathyXX.png', dpi=300)"
    ]
   },
   {
@@ -119,7 +142,163 @@
     "reef.mPlot.waveHeight(height=hght, lvls=levels, color=cmocean.cm.thermal, fsize=(7.5,5), fname='height.png', dpi=300)\n",
     "U = reef.force.wavU[0].T\n",
     "V = reef.force.wavV[0].T\n",
-    "reef.mPlot.bottomCurrents(U, V, gauss=3., dens=3, color=cmocean.cm.deep, fsize=(7.5,5), fname='currents.png', dpi=300)"
+    "#reef.mPlot.bottomCurrents(U, V, gauss=1., dens=1, color=cmocean.cm.deep, fsize=(7.5,5), fname='currents.png', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualise deposition rate based on Soulsby - Van Rijn formulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "vmin = -0.02\n",
+    "vmax = 0.02\n",
+    "reef.mPlot.morphochange(reef.hydro.dh[0], min=vmin, max=vmax, gauss=1., \n",
+    "                      color=cmocean.cm.balance, fsize=(7.5,5), \n",
+    "                      fname='depositionXX.png', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy\n",
+    "x = numpy.array([[1, 3, 6, 10], [0, 5, 6, 8], [3, 1, 6, 0]])\n",
+    "print x\n",
+    "print x.shape\n",
+    "# x(i-1,j) - x(i,j)\n",
+    "dx = numpy.zeros(x.shape)\n",
+    "dx[1:x.shape[0],:] = -numpy.diff(x,axis=0)\n",
+    "dx[0,:] = dx[1,:]\n",
+    "\n",
+    "print dx\n",
+    "# x(i,j) - x(i,j+1)\n",
+    "dy = numpy.zeros(x.shape)\n",
+    "dy[:,:x.shape[1]-1] = -numpy.diff(x,axis=1)\n",
+    "dy[:,-1] = dy[:,-2]\n",
+    "print dy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# x(i+1,j) - x(i-1,j)\n",
+    "tmp1 = numpy.zeros(x.shape)\n",
+    "tmp1[1:x.shape[0],:] = -numpy.diff(x,axis=0)\n",
+    "tmp1[0,:] = tmp1[1,:]\n",
+    "print tmp1\n",
+    "tmp2 = numpy.zeros(x.shape)\n",
+    "tmp2[:x.shape[0]-1,:] = -numpy.diff(x,axis=0)\n",
+    "tmp2[-1,:] = tmp2[-2,:]\n",
+    "print tmp2\n",
+    "sum1 = -(tmp1+tmp2)\n",
+    "sum1[0,:] = sum1[1,:]\n",
+    "sum1[-1,:] = sum1[-2,:]\n",
+    "print sum1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tmp = numpy.zeros(x.shape)\n",
+    "tmp[1:-1,:] = x[2:,:]-x[:-2,:]\n",
+    "tmp[0,:] = tmp[1,:]\n",
+    "tmp[-1,:] = tmp[-2,:]\n",
+    "print tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tmp1 = numpy.zeros(x.shape)\n",
+    "tmp1[:,1:x.shape[1]] = -numpy.diff(x,axis=1)\n",
+    "tmp1[:,0] = tmp1[:,1]\n",
+    "tmp2 = numpy.zeros(x.shape)\n",
+    "tmp2[:,:x.shape[1]-1] = -numpy.diff(x,axis=1)\n",
+    "tmp2[:,-1] = tmp2[:,-2]\n",
+    "sum2 = -(tmp1+tmp2)\n",
+    "sum2[:,0] = sum2[:,1]\n",
+    "sum2[:,-1] = sum2[:,-2]\n",
+    "print sum2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sum2 = numpy.zeros(x.shape)\n",
+    "sum2[:,1:-1] = x[:,2:]-x[:,:-2]\n",
+    "sum2[:,0] = sum2[:,1]\n",
+    "sum2[:,-1] = sum2[:,-2]\n",
+    "print sum2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dx2 = numpy.zeros(x.shape)\n",
+    "dx2[1:,:] = x[:-1,:]-x[1:,:]\n",
+    "dx2[0,:] = dx2[1,:]\n",
+    "print dx2\n",
+    "dy2 = numpy.zeros(x.shape)\n",
+    "dy2[:,:-1] = x[:,:-1]-x[:,1:]\n",
+    "dy2[:,-1] = dy2[:,-2]\n",
+    "print dy2"
    ]
   },
   {
@@ -145,28 +324,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "hght = reef.force.wavH[0]\n",
+    "levels = [0.5,1,1.5,2,2.5,3,3.5,4]\n",
+    "reef.mPlot.waveHeight(height=hght, lvls=levels, color=cmocean.cm.thermal, fsize=(7.5,5), fname='height.png', dpi=300)\n",
+    "\n",
+    "U = reef.force.wavU[0].T\n",
+    "V = reef.force.wavV[0].T\n",
+    "reef.mPlot.bottomCurrents(U, V, gauss=3., dens=1, color=cmocean.cm.deep, fsize=(7.5,5), fname='currents.png', dpi=300)"
+   ]
   },
   {
    "cell_type": "code",
